# dupl_imgs_founder

./: README.md  pyproject.toml
src/: design.py  deskapp.py  founder.py  main.py
